@@ -1,3 +1,4 @@
+option('systemd', type: 'feature', description: 'systemd support')
 option('syslog', type: 'feature', description: 'syslog support')
 
 option('test', type: 'boolean', value: false, description: 'Build the unit tests and debug programs')
